Fixed NavBar Bug on mobile devices

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -42,7 +42,7 @@ body{
   background-color: #1b262c;
   display: block;
   margin: 0 auto;
-  width: 100%;
+  width: 1600px;
   text-align: center;
 }
 .Name h1{
